@@ -251,10 +251,6 @@ PaError Pa_SetupOutputDeviceFormat( int devHandle, int numChannels, int sampleRa
        * blocksize set. After a minute or so it flips into the
        * correct mode, but obviously this is too late to be + * useful for most apps. grrr.
        */
-    /* AS: And the Solaris man audio pages say you should flush before changing formats
-       anyway.  So there you go. */
-    if (Pa_FlushStream(devHandle) != paNoError)
-      return paHostError;
 
     solaris_info.play.encoding = AUDIO_ENCODING_LINEAR;
     solaris_info.play.sample_rate = sampleRate;
@@ -353,7 +349,7 @@ static PaError Pa_PauseAndFlush(int devHandle)
   audio_info_t solaris_info;
   AUDIO_INITINFO(&solaris_info);
 
-  solaris_info.play.pause = solaris_info.record.pause = 1;
+  solaris_info.record.pause = 1;
 
   if (ioctl(devHandle, AUDIO_SETINFO, &solaris_info) == -1)
     {
@@ -361,17 +357,35 @@ static PaError Pa_PauseAndFlush(int devHandle)
       return paHostError;
     }
 
+#if defined I_FLUSH && defined FLUSHW
+  /* Flush the audiobuffer */
   if (ioctl(devHandle, I_FLUSH, FLUSHRW) == -1)
     {
       ERR_RPT(("Pa_FlushStream failed.\n"));
 
       /* Unpause! */
       AUDIO_INITINFO(&solaris_info);
-      solaris_info.play.pause = solaris_info.record.pause = 0;
+      solaris_info.record.pause = 0;
       ioctl(devHandle, AUDIO_SETINFO, &solaris_info);
 
       return paHostError;
     }
+#endif
+
+#if defined AUDIO_FLUSH
+    if (ioctl(devHandle, AUDIO_FLUSH, NULL) == -1)
+    {
+      ERR_RPT(("Pa_FlushStream failed.\n"));
+
+      /* Unpause! */
+      AUDIO_INITINFO(&solaris_info);
+      solaris_info.record.pause = 0;
+      ioctl(devHandle, AUDIO_SETINFO, &solaris_info);
+
+      return paHostError;
+    }
+#endif
+
   return paNoError;
 }
 
@@ -380,7 +394,7 @@ static PaError Pa_Unpause(int devHandle)
   audio_info_t solaris_info;
   AUDIO_INITINFO(&solaris_info);
 
-  solaris_info.play.pause = solaris_info.record.pause = 0;
+  solaris_info.record.pause = 0;
 
   if (ioctl(devHandle, AUDIO_SETINFO, &solaris_info) == -1)
     {
