@@ -1,3 +1,10 @@
+2012-07-02 18:43  paddockd
+
+	* [r357] ChangeLog, lib/portaudio/pa_unix_oss/pa_unix.c,
+	  src/squeezeslave/squeezeslave.c: Applied Linux Duplex bug fix
+	  from Alan Horstmann 4.6.07 to portaudio v18.
+	  Increased revision to 357.
+
 2012-06-21 16:45  paddockd
 
 	* [r356] src/slimaudio/slimaudio.c,
